# ecc

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.cn.md  README.md  ecc.spec  flake.nix  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bazel/scripts/: build-wheel.sh
chipcompiler/: BUILD.bazel  __init__.py  pyinstaller_utils.py
chipcompiler/cli/: __init__.py  app.py  artifacts.py  command_inputs.py  commands.py  config.py  config_view.py  diagnose.py  handlers.py  inspect.py  invocation.py  log_view.py  main.py  output.py  param_app.py  param_handler.py  params.py  pretty.py  progress.py  project.py  project_app.py  records.py  render.py  renderers.py  types.py  workspace.py  workspace_app.py  workspace_request.py  workspace_response.py  workspace_service.py
chipcompiler/data/: __init__.py  checklist.py  home.py  parameter.py  pdk.py  workspace.py
chipcompiler/engine/: db.py  flow.py
chipcompiler/rtl2gds/: __init__.py  builder.py
chipcompiler/tools/: eda.py
chipcompiler/utility/: json.py  plot.py
docs/: development.md  index.md  workspace-cli.md
docs/specification/: cli-design.md  filelist-grammar.md
hooks/: hook-chipcompiler.py  hook-dreamplace.py
nix/: overlay.nix
nix/chipcompiler/: default.nix
nix/cli/: default.nix
nix/modules/: devShells.nix
packaging/: run_ecc.py
test/: conftest.py  pdk_runtime.py  test_conftest_import.py  test_data_pdk.py  test_design_parameters.py  test_ecc_dreamplace_config_permissions.py  test_ecc_dreamplace_module.py  test_ecc_dreamplace_parameter_overrides.py  test_ecc_sizer_module.py  test_ecc_tools_module.py  test_harden.py  test_home_data.py  test_json_utility.py  test_rcx.py  test_tools.py  test_workspace.py
test/cli/: conftest.py  test_cli_inspect.py  test_cli_main.py  test_cli_module_layout.py  test_cli_params.py  test_log_view.py  test_params.py  test_pretty.py  test_progress.py  test_typer_cli.py  test_workspace_cli.py
test/data/: conftest.py  test_design_parameters.py  test_pdk.py  test_workspace.py  test_workspace_filelist.py
test/formal/: README.md  test_param_merge.py  test_param_propagation.py  test_state_machine.py
(+106 files in other folders)
