package(default_visibility = ["//visibility:public"])

filegroup(
    name = "ecc_pyinstaller_srcs",
    srcs = [
        "ecc.spec",
        "pyproject.toml",
        "uv.lock",
        "packaging/run_ecc.py",
    ] + glob([
        "hooks/*.py",
    ]) + [
        "//chipcompiler:chipcompiler_python_sources",
        "//chipcompiler:chipcompiler_runtime_data",
    ],
)

alias(
    name = "prepare_dev",
    actual = "//bazel/scripts:prepare_dev",
)

genrule(
    name = "raw_wheel",
    srcs = [
        "pyproject.toml",
        "README.md",
        "//chipcompiler:chipcompiler_python_sources",
        "//chipcompiler:chipcompiler_runtime_data",
    ],
    outs = ["raw_wheel/ecc-0.1.0a2-py3-none-any.whl"],
    tools = ["@multitool//tools/uv"],
    cmd = """
        set -euo pipefail
        UV="$(execpath @multitool//tools/uv)"
        STAGE=$$(mktemp -d)
        trap 'rm -rf "$$STAGE"' EXIT
        for src in $(locations pyproject.toml) \
                   $(locations README.md) \
                   $(locations //chipcompiler:chipcompiler_python_sources) \
                   $(locations //chipcompiler:chipcompiler_runtime_data); do
            mkdir -p "$$STAGE/$$(dirname "$$src")"
            cp "$$src" "$$STAGE/$$src"
        done
        "$$UV" build --wheel --directory "$$STAGE" --out-dir "$$STAGE/_dist" --cache-dir "$$STAGE/.uv-cache"
        cp "$$STAGE"/_dist/*.whl "$@"
    """,
)

alias(
    name = "build_wheel",
    actual = "//bazel/scripts:build_wheel",
)

genrule(
    name = "build_ecc_cli_bundle",
    srcs = [
        ":ecc_pyinstaller_srcs",
        "ecc.spec",
    ],
    outs = ["build_ecc_cli_bundle/ecc.tar"],
    tags = ["local", "no-sandbox"],
    tools = ["@ecos-bazel//tools:pyinstaller"],
    cmd = """
        set -euo pipefail

        export PYTHON_INTERPRETER=".venv/bin/python"
        export ECOS_PYINSTALLER_MODE="onedir"
        DIST_DIR="$(@D)/dist"
        WORK_DIR="$(@D)/build_ecc_cli_bundle_work"

        $(location @ecos-bazel//tools:pyinstaller) $(location ecc.spec) \
          --clean \
          --noconfirm \
          --distpath "$$DIST_DIR" \
          --workpath "$$WORK_DIR"

        tar -cf "$@" -C "$$DIST_DIR/ecc" .
    """,
)
